--- a/src/main/java/cz/muni/fi/DebugDbAnalyzerApp/Application/AnalyzerApp.form
+++ b/src/main/java/cz/muni/fi/DebugDbAnalyzerApp/Application/AnalyzerApp.form
@@ -289,9 +289,11 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="loggerOutputJScrollPane" alignment="1" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="verboseLevelJCheckBox" min="-2" max="-2" attributes="0"/>
                           <Component id="justInfoJLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -308,7 +310,6 @@
                       </Group>
                       <EmptySpace pref="24" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="loggerOutputJScrollPane" alignment="1" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
@@ -330,8 +331,10 @@
                           </Group>
                           <Component id="analyzeJButton" min="-2" pref="35" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="loggerOutputJScrollPane" pref="264" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="verboseLevelJCheckBox" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="loggerOutputJScrollPane" pref="254" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -411,6 +414,11 @@
                 </Component>
               </SubComponents>
             </Container>
+            <Component class="javax.swing.JCheckBox" name="verboseLevelJCheckBox">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="check if verbose level logs are in database"/>
+              </Properties>
+            </Component>
           </SubComponents>
         </Container>
       </SubComponents>
